split latex string into key value list for later filtering

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -16,7 +16,8 @@
 %\renewcommand*{\Sammlungsordner}{Fragesammlung}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
-\renewcommand*{\Themenliste}{%
+\renewcommand*{\Themenliste}
+{%
   01-Algebra,
   %02-Potenzrechnen,
   %03-Lineare-Gleichungen,
@@ -46,6 +47,13 @@
 % Wünscht man andere wahr/falsch-Unterordner, können sie hier geändert werden.
 %\renewcommand*{\WahreAussagen}{01-wahr}
 %\renewcommand*{\FalscheAussagen}{02-falsch}
+
+
+\renewcommand*{\Filterlist}
+{%
+  VERFASSER=Bruno Bischofberger,
+  AUSRICHTUNG=alle,
+}%
 
 
 % ==================================================================
