library folder renamed

--- a/AussagetestDebug.tex
+++ b/AussagetestDebug.tex
@@ -2,7 +2,7 @@
 % FILE     AussagetestDebug.tex
 % INFO     -
 %
-% DATE     10.07.2022
+% DATE     11.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -13,7 +13,7 @@
 \usepackage{randgentests}
 
 % redefine parent folder here if you wish
-%\renewcommand*{\Sammlungsordner}{Fragesammlung}
+%\renewcommand*{\Sammlungsordner}{Aussagesammlung}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
 \renewcommand*{\Themenliste}{%
@@ -59,7 +59,7 @@
 
 \CreateStatementTest[solutions=true, file paths=true]{3}{5}
 
-%\PrintEntireLibrary
+\PrintEntireLibrary
 
 %\directlua{%
 %  require('statementCollator.lua')
