--- a/randgentests.sty
+++ b/randgentests.sty
@@ -31,7 +31,7 @@
 
 
 % define parent folder here
-\newcommand*{\Sammlungsordner}{Fragesammlung}
+\newcommand*{\Sammlungsordner}{Aussagesammlung}
 
 % define subfolders here
 % set default: all folders
