--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -2,7 +2,7 @@
 % FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     05.07.2022
+% DATE     11.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -13,7 +13,7 @@
 \usepackage{randgentests}
 
 % redefine parent folder here if you wish
-%\renewcommand*{\Sammlungsordner}{Fragesammlung}
+%\renewcommand*{\Sammlungsordner}{Aussagesammlung}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
 \renewcommand*{\Themenliste}
