--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -10,7 +10,7 @@
 
 % ------------------------------------------------------------------
 % some info here...
-\usepackage{randgentests}
+\usepackage{randgentftest}
 
 % redefine parent folder here if you wish
 %\renewcommand*{\Sammlungsordner}{Aussagesammlung}
