--- a/AussagetestDebug.tex
+++ b/AussagetestDebug.tex
@@ -2,7 +2,7 @@
 % FILE     AussagetestDebug.tex
 % INFO     -
 %
-% DATE     11.07.2022
+% DATE     12.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -10,7 +10,7 @@
 
 % ------------------------------------------------------------------
 % some info here...
-\usepackage{randgentests}
+\usepackage{randgentftest}
 
 % redefine parent folder here if you wish
 %\renewcommand*{\Sammlungsordner}{Aussagesammlung}
