--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -1,8 +1,8 @@
 % ==================================================================
-% FILE     randgentests.sty
+% FILE     randgentftest.sty
 % INFO     
 %
-% DATE     11.07.2022
+% DATE     12.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -13,8 +13,9 @@
 % and version 1.3 or later is part of all distributions of LaTeX
 % version 2005/12/01 or later.
 
-\ProvidesPackage{randgentests}
+\ProvidesPackage{randgentftest}
 
+\RequirePackage{tikz}
 
 % set up checklist environment
 \RequirePackage[inline]{enumitem}
@@ -119,7 +120,7 @@
 {%
   \pgfkeys{/aussagetest, default, #1}%
   \directlua{%
-    require('statementCollator.lua')
+    require('randgentftest.lua')
     \ifPrintSolutions  
       \ifPrintFilePaths
         createRandGenTest('\Sammlungsordner', '\Themenliste', '\WahreAussagen', '\FalscheAussagen', #2, #3, '\Filterlist', true, true)
@@ -137,7 +138,7 @@
 {%
   \pgfkeys{/aussagetest, default, #1}%
   \directlua{%
-    require('statementCollator.lua')
+    require('randgentftest.lua')
     \ifPrintFilePaths  
       printAll('\Sammlungsordner', '\Filterlist', true)
     \else
