--- a/AussagetestDebug.tex
+++ b/AussagetestDebug.tex
@@ -6,17 +6,17 @@
 % OWNER    Bischofberger
 % ==================================================================
 
-\documentclass{AussagetestClass}
+\documentclass{randgentftestbmzcls}
 
 % ------------------------------------------------------------------
 % some info here...
 \usepackage{randgentftest}
 
 % redefine parent folder here if you wish
-%\renewcommand*{\Sammlungsordner}{Aussagesammlung}
+%\renewcommand*{\Collectionfolder}{Aussagesammlung}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
-\renewcommand*{\Themenliste}
+\renewcommand*{\Topicfolders}
 {%
   01-Algebra,
   02-Potenzrechnen,
