--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -2,13 +2,12 @@
 % FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     15.07.2022
+% DATE     19.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
 \documentclass{randgentftestbmzcls}
 
-% ------------------------------------------------------------------
 % some info here...
 \usepackage{randgentftest}
 
@@ -51,6 +50,7 @@
 %  AUSRICHTUNG=TALS,
 %}%
 
+%\drawTikZcheckboxes
 
 % ==================================================================
 \begin{document}
