--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -55,8 +55,10 @@
 % ==================================================================
 \begin{document}
 
+\section*{Wahr-Falsch-Test}
 \CreateStatementTest[solutions=true, filepaths=false]{3}{5}
 
+%\section*{Gesamte Aussagesammlung}
 %\PrintEntireLibrary[filepaths=false]
 
 \end{document}
