--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -2,7 +2,7 @@
 % FILE     randgentftest.sty
 % INFO     
 %
-% DATE     20.07.2022
+% DATE     22.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -25,8 +25,6 @@
 \tl_set:Nn \l__randgentftest_checkedbox_tl {
   \mbox { \makebox [ 0pt ] [ l ] { \raisebox { 0.22ex } { \ensuremath { \times } } } \ensuremath { \square } } }
 
-\NewDocumentCommand \luaCheckedbox { } { \tl_use:N \l__randgentftest_checkedbox_tl }
-
 % checkbox alternative using tikz (not relying on fonts): 
 \NewDocumentCommand \drawTikZcheckboxes { } {
   \RequirePackage { tikz }
@@ -43,6 +41,9 @@
     \end{tikzpicture}
   }
 }
+
+% Using expl3 directly within randgentftest.lua is problematic - it breaks file paths with spaces etc. So here we export the variable in a traditional LaTeX2e form.
+\cs_new:Npn \getCheckedbox { \tl_use:N \l__randgentftest_checkedbox_tl }
 
 \RequirePackage { enumitem }
 \newlist { checklist } { itemize } { 2 }
@@ -129,8 +130,6 @@
 \newcommand*{\Filterlist}{}
 
 
-\ExplSyntaxOn
-
 \keys_define:nn{randgentftest/print}
 {%
   solutions .bool_set:N = \l__print_solutions_bool,
@@ -185,5 +184,4 @@
   }%
 }%
 
-\ExplSyntaxOff
 
